--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.20.1",
     "react-slick": "^0.29.0",
+    "react-world-flags": "^1.6.0",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
