--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mui/material": "^5.15.3",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.11",
     "flowbite-react": "^0.7.2",
     "framer-motion": "^10.16.16",
     "react": "^18.2.0",
@@ -18,7 +20,8 @@
     "react-router-dom": "^6.20.1",
     "react-slick": "^0.29.0",
     "react-world-flags": "^1.6.0",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "styled-components": "^6.1.6"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
