--- a/client/package.json
+++ b/client/package.json
@@ -22,10 +22,12 @@
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.20.1",
     "react-slick": "^0.29.0",
+    "react-slideshow-image": "^4.3.0",
     "react-world-flags": "^1.6.0",
     "redux-persist": "^6.0.0",
     "slick-carousel": "^1.8.1",
-    "styled-components": "^6.1.6"
+    "styled-components": "^6.1.6",
+    "swiper": "^11.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
