--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react-icons": "^4.12.0",
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.20.1",
+    "react-router-hash-link": "^2.4.3",
     "react-slick": "^0.29.0",
     "react-slideshow-image": "^4.3.0",
     "react-typed": "^2.0.12",
