--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,8 @@
     "@mui/material": "^5.15.3",
     "@mui/styled-engine-sc": "^6.0.0-alpha.11",
     "@reduxjs/toolkit": "^2.0.1",
-    "firebase": "^10.7.1",
+    "emailjs": "^4.0.3",
+    "firebase": "^10.8.1",
     "flowbite-react": "^0.7.2",
     "framer-motion": "^10.16.16",
     "react": "^18.2.0",
