--- a/client/package.json
+++ b/client/package.json
@@ -10,10 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.3.1",
     "@mui/material": "^5.15.3",
     "@mui/styled-engine-sc": "^6.0.0-alpha.11",
     "@reduxjs/toolkit": "^2.0.1",
-    "emailjs": "^4.0.3",
     "firebase": "^10.8.1",
     "flowbite-react": "^0.7.2",
     "framer-motion": "^10.16.16",
@@ -30,6 +30,7 @@
     "redux-persist": "^6.0.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.6",
+    "sweetalert2": "^11.10.6",
     "swiper": "^11.0.5"
   },
   "devDependencies": {
